# SubhaSankalpam

./: .gitignore  DEPLOYMENT.md  README.md  docker-compose.yml
.github/workflows/: ci.yml
backend/: .env.example  Dockerfile  Dockerfile.production  alembic.ini  entrypoint.sh  pyproject.toml  requirements.txt
backend/app/: main.py
backend/app/api/v1/: router.py
backend/app/api/v1/endpoints/: admin.py  ai.py  auth.py  chat.py  horoscope.py  matches.py  notifications.py  photos.py  profiles.py  subscriptions.py
backend/app/core/: config.py  security.py
backend/app/db/: session.py
backend/app/middleware/: auth.py
backend/app/models/: __init__.py  ai_score.py  audit.py  chat.py  fraud.py  horoscope.py  interest.py  match.py  notification.py  photo.py  profile.py  subscription.py  user.py  verification.py
backend/app/schemas/: admin.py  ai.py  auth.py  chat.py  horoscope.py  match.py  profile.py  subscription.py  user.py
backend/app/services/ai/chat_assistant/: assistant_service.py
backend/app/services/ai/compatibility/: compatibility_service.py
backend/app/services/ai/fraud/: fraud_service.py
backend/app/services/ai/recommendations/: recommendation_service.py
backend/app/services/ai/verification/: verification_service.py
backend/app/services/auth/: auth_service.py  otp_service.py
backend/migrations/: env.py
backend/migrations/versions/: 001_initial_schema.py  002_seed_data.py
backend/tests/: conftest.py  test_auth.py  test_health.py
frontend/: pubspec.yaml
frontend/lib/: main.dart
frontend/web/: index.html  manifest.json
(+30 files in other folders)
